# Apvero

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  build.gradle.kts  gradle.properties  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts
.github/workflows/: ci.yaml
apps/ai-worker/: Dockerfile  pyproject.toml
apps/ai-worker/benchmarks/: __init__.py  benchmark_parser_candidates.py  parser_candidates.py
apps/ai-worker/benchmarks/corpus/: manifest.json
apps/ai-worker/benchmarks/corpus/html/: active-content.html
apps/ai-worker/benchmarks/corpus/markdown/: structure.md
apps/ai-worker/benchmarks/corpus/text/: unicode.txt
apps/ai-worker/src/apvero_worker/: __init__.py  document_processing.py  main.py  models.py  services.py
apps/ai-worker/tests/: test_api.py  test_document_processing.py  test_parser_candidates.py  test_services.py
apps/console/: Dockerfile  index.html  package.json  vite.config.ts
apps/platform-server/: Dockerfile  build.gradle.kts
architecture/: delivery-stages.yaml  dependency-rules.yaml  invariants.yaml  modules.yaml  technology-baseline.yaml
contracts/events/: run-completed.v1.schema.json
contracts/examples/: grounded-answer.v1.json  release-bundle-manifest.v1.0.legacy.json  release-bundle-manifest.v1.1.rag.json
contracts/openapi/: ai-worker-internal.v1.yaml  platform-api.yaml
contracts/plugin-sdk/: README.md
contracts/schemas/: citation.v1.schema.json  grounded-answer.v1.schema.json  plugin-manifest.schema.json  (+2 more)
gradle/: libs.versions.toml
product/: navigation.yaml  pages.yaml
(+308 files in other folders)
