[project]
name = "apvero-ai-worker"
version = "0.1.0"
description = "Stateless document and evaluation worker for Apvero"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.128.0",
  "pydantic==2.12.5",
  "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.2",
  "ruff==0.14.14",
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apvero_worker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
