[project]
name = "apvero-ai-worker"
version = "0.1.0"
description = "Stateless document and evaluation worker for Apvero"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4==4.15.0",
  "fastapi==0.139.2",
  "pydantic==2.12.5",
  "pypdf==6.14.2",
  "python-docx==1.2.0",
    "python-multipart==0.0.31",
  "starlette==1.3.1",
  "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
  "httpx2==2.7.0",
  "jsonschema[format]==4.26.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "ruff==0.14.14",
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apvero_worker"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
